--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "dependencies": {
     "async-readable": "^0.1.4",
     "proxy-bind": "^1.1.0",
-    "ramda": "^0.26.1"
+    "ramda": "~0.26.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
-    "@types/ramda": "^0.26.16",
+    "@types/ramda": "~0.26.16",
     "jest": "^24.8.0",
     "jest-junit": "^6.4.0",
     "rollup": "^1.16.7",
