--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "rollup": "^1.16.7",
     "ts-jest": "^24.0.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.3",
+    "typescript": "~3.5.3",
     "utility-types": "^3.7.0"
   }
 }
