--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "license": "MIT",
   "dependencies": {
     "async-readable": "^0.1.5",
+    "bn.js": "^5.0.0",
     "buffer-pond": "^0.6.0",
     "proxy-bind": "^1.1.0",
     "ramda": "~0.26.1"
   },
   "devDependencies": {
+    "@types/bn.js": "^4.11.5",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "@types/ramda": "~0.26.16",
