--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "async-readable": "^0.1.5",
+    "async-readable": "~0.2.0",
     "bn.js": "^5.0.0",
-    "buffer-pond": "^0.6.0",
+    "buffer-pond": "~0.7.0",
     "proxy-bind": "^1.1.0",
     "ramda": "~0.26.1"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.5",
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.8",
+    "@types/jest": "^24.0.16",
+    "@types/node": "^10.14.14",
     "@types/ramda": "~0.26.16",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
-    "rollup": "^1.16.7",
+    "rollup": "^1.18.0",
     "ts-jest": "^24.0.2",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
