--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "async-readable": "^0.1.5",
     "bn.js": "^5.0.0",
-    "buffer-pond": "^0.6.0",
+    "buffer-pond": "~0.7.0-0",
     "proxy-bind": "^1.1.0",
     "ramda": "~0.26.1"
   },
