--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "async-readable": "^0.1.5",
+    "async-readable": "~0.2.0-1",
     "bn.js": "^5.0.0",
-    "buffer-pond": "~0.7.0-0",
+    "buffer-pond": "~0.7.0-1",
     "proxy-bind": "^1.1.0",
     "ramda": "~0.26.1"
   },
