--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           version: 12.x
+          registry-url: https://registry.npmjs.org/
 
       - run: npm dist-tag add $(npm run -s ver) latest
         env:
