--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,11 +23,12 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
       - uses: actions/setup-node@v1
         with:
           version: 12.x
+          node-version: 12.x
 
       - run: npm install
       - run: npm run test
@@ -42,11 +43,12 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
       - uses: actions/setup-node@v1
         with:
           version: 12.x
+          node-version: 12.x
           registry-url: https://registry.npmjs.org/
 
       - run: npm publish --tag=next
