--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,11 +18,12 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
       - uses: actions/setup-node@v1
         with:
           version: 12.x
+          node-version: 12.x
 
       - run: npm install
       - run: npm run test
