--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -23,11 +23,12 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
       - uses: actions/setup-node@v1
         with:
           version: 12.x
+          node-version: 12.x
           registry-url: https://registry.npmjs.org/
 
       - run: npm dist-tag add $(npm run -s ver) latest
