--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,6 +50,7 @@ jobs:
           node-version: 12.x
           registry-url: https://registry.npmjs.org/
 
+      - run: npm install
       - run: npm run build
 
       - run: npm publish --tag=next
