--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -33,5 +33,5 @@ jobs:
 
       - run: npm dist-tag add $(npm run -s ver) latest
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
