--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^24.0.16",
     "@types/node": "^10.14.14",
     "@types/ramda": "~0.26.16",
+    "bitcoinjs-lib": "^5.1.3",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
     "rollup": "^1.18.0",
