--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: 12.x
 
       - run: npm install
-      - run: npm run test
+      - run: npm run test -- --verbose
       - run: npm run build
 
       - run: npx codecov
