--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,10 @@ sonar.projectKey=imcotton_bcb-stream-parser
 
 sonar.sources=./lib
 
+sonar.tests=./test
+sonar.test.exclusions=**/test/helpers/*
+sonar.test.inclusions=**/test/*.spec.ts
+
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
+
