--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,15 +14,18 @@ jobs:
 
   checking:
     name: Check
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '10', '12', '14' ]
 
     steps:
 
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: ${{ matrix.node }}
 
       - run: npm install && npm install jest-sonar-reporter
       - run: npm run test -- --verbose --testResultsProcessor=jest-sonar-reporter
@@ -34,11 +37,10 @@ jobs:
 
       - run: npm run build
 
-      - run: npx codecov
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: codecov/codecov-action@v1
+        timeout-minutes: 1
 
-      - uses: sonarsource/sonarcloud-github-action@v1.1
+      - uses: sonarsource/sonarcloud-github-action@v1.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
